Add approval_required field on Lando Stack api
