# landoapi/api/stacks.py
@@ -138,7 +138,11 @@ def get(revision_id):
         short_name = PhabricatorClient.expect(
             stack_data.repositories[phid], "fields", "shortName"
         )
-        landing_supported = short_name in supported_repos
+        repo = supported_repos.get(short_name)
+        if repo is None:
+            landing_supported, approval_required = False, None
+        else:
+            landing_supported, approval_required = True, repo.approval_required
         url = (
             "{phabricator_url}/source/{short_name}".format(
                 phabricator_url=current_app.config["PHABRICATOR_URL"],
@@ -153,6 +157,7 @@ def get(revision_id):
                 "short_name": short_name,
                 "url": url,
                 "landing_supported": landing_supported,
+                "approval_required": approval_required,
             }
         )
 
